# api-rabbitQM-docker

./: .gitignore  Dockerfile  README 2.md  README.md  consumer.py  docker-compose.yml  main.py  pyproject.toml
api/: Dockerfile  __init__.py  main.py  requirements.txt
scripts/: install_api.sh  install_haproxy.sh  install_mongodb.sh  install_rabbitmq.sh  install_worker.sh
terraform/: main.tf  outputs.tf  security_groups.tf  variables.tf
tests/: test_main.py
worker/: consumer.py  get_parameter.py
