[project]
name = "api-rabbitQM-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.85",
    "fastapi>=0.129.0",
    "mypy>=1.19.1",
    "pika>=1.3.2",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "uvicorn>=0.40.0",
]

[tool.mypy]
python_version = "3.13"
strict_optional = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["pika.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
